--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -26,7 +26,7 @@ endif
 
 bin_PROGRAMS = chk_tree hostn printjob printtracking printserverdb tracejob $(PROGRAMS_TCL) $(PROGRAMS_TK)
 
-LDADD = $(PBS_LIBS)
+LDADD = $(PBS_LIBS) $(TRANSPORTLIBS)
 CLEANFILES = *.gcda *.gcno *.gcov
 
 tracejob_CFLAGS = -DPBS_SERVER_HOME=\"$(PBS_SERVER_HOME)\"
