--- a/src/server/Makefile.am
+++ b/src/server/Makefile.am
@@ -16,7 +16,7 @@ PBS_LIBS = ../lib/Libattr/libattr.a \
 
 sbin_PROGRAMS = pbs_server
 
-pbs_server_LDADD = $(PBS_LIBS) $(ALPS_LIBS)
+pbs_server_LDADD = $(PBS_LIBS) $(ALPS_LIBS) $(TRANSPORTLIBS)
 AM_CFLAGS = -DPBS_SERVER_HOME=\"$(PBS_SERVER_HOME)\" -DPBS_ENVIRON=\"$(PBS_ENVIRON)\" `xml2-config --cflags`
 AM_LIBS   =`xml2-config --libs`
 
