Refactored the code: splitted C code by modules, implemented Json messaging as C++ classes.

--- a/configure.ac
+++ b/configure.ac
@@ -2326,6 +2326,7 @@ AC_OUTPUT(buildutils/pbs_mkdirs
 	  src/lib/Libcsv/Makefile
 	  src/lib/Libdis/Makefile
 	  src/lib/Libifl/Makefile
+	  src/lib/Libjson/Makefile
 	  src/lib/Liblog/Makefile
 	  src/lib/Libnet/Makefile
 	  src/lib/Libpbs/Makefile
