--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -1,10 +1,10 @@
 include $(top_srcdir)/buildutils/config.mk
 
-SUBDIRS = Libattr Libcmds Libcsv Libdis Libifl Liblog Libnet Libpbs Libsite Libutils
+SUBDIRS = Libattr Libcmds Libcsv Libdis Libifl Libjson Liblog Libnet Libpbs Libsite Libutils
 
 CHECK_DIR = test
 
-DIST_SUBDIRS = Libattr Libcmds Libcsv Libdis Libifl Liblog Libnet Libpbs Libsite Libutils
+DIST_SUBDIRS = Libattr Libcmds Libcsv Libdis Libifl Libjson Liblog Libnet Libpbs Libsite Libutils
 
 cleancheck:
 	@for dir in $(SUBDIRS) $(CHECK_DIR); do (cd $$dir && $(MAKE) cleancheck); done
