--- a/src/lib/Libjson/test/Makefile.am
+++ b/src/lib/Libjson/test/Makefile.am
@@ -1,5 +1,4 @@
-#CHECK_DIRS = discui_ discul_ disi10d_ disi10l_ disiui_ disp10d_ disp10l_ disrcs disrd disrf disrfcs disrfst disrl disrl_ disrsc disrsi disrsi_ disrsl disrsl_ disrss disrst disruc disrui disrul disrus diswcs diswf diswl_ diswsi diswsl diswui diswui_ diswul
-CHECK_DIRS = 
+CHECK_DIRS = Message MomStatusMessage
 
 $(CHECK_DIRS)::
 	$(MAKE) -C $@ $(MAKECMDGOALS)
