--- a/src/lib/Libjson/test/MomStatusMessage/Makefile.am
+++ b/src/lib/Libjson/test/MomStatusMessage/Makefile.am
@@ -3,6 +3,7 @@ include $(top_srcdir)/buildutils/config.mk
 PROG_ROOT = ../..
 
 AM_CFLAGS = -g -DTEST_FUNCTION -I${PROG_ROOT}/ -I${PROG_ROOT}/${PBS_MACH} --coverage
+AM_CXXFLAGS = ${AM_CFLAGS}
 
 lib_LTLIBRARIES = libMomStatusMessage.la
 
