--- a/src/resmom/test/mom_zstatus/Makefile.am
+++ b/src/resmom/test/mom_zstatus/Makefile.am
@@ -3,6 +3,7 @@
 PROG_ROOT = ../..
 
 AM_CFLAGS = -g -DTEST_FUNCTION -I${PROG_ROOT}/ -I${PROG_ROOT}/${PBS_MACH} --coverage
+AM_CXXFLAGS = ${AM_CFLAGS}
 
 lib_LTLIBRARIES = libmom_zstatus.la
 
