--- a/src/server/Makefile.am
+++ b/src/server/Makefile.am
@@ -42,7 +42,7 @@ pbs_server_SOURCES = accounting.c array_func.c array_upgrade.c attr_recov.c \
 				 display_alps_status.c login_nodes.c track_alps_reservations.c \
 				 batch_request.c user_info.c job_container.c exiting_jobs.c \
 				 receive_mom_communication.c process_mom_update.c execution_slot_tracker.cpp \
-				 job_usage_info.cpp zmq_process_mom_update.c
+				 job_usage_info.cpp zmq_process_mom_update.cpp
 
 install-exec-hook:
 	$(PBS_MKDIRS) aux || :
