--- a/src/lib/Libcsv/Makefile.am
+++ b/src/lib/Libcsv/Makefile.am
@@ -1,6 +1,8 @@
 include $(top_srcdir)/buildutils/config.mk
 
 CHECK_DIR = test
+GCHECK_DIR = gtest
+check_SCRIPTS = ../../test/merge_cov.sh
 
 DIST_SUBDIRS =
 
@@ -9,8 +11,11 @@ DIST_SUBDIRS =
 if HAVE_CHECK
 check:
 	$(MAKE) -C $(CHECK_DIR) $(MAKECMDGOALS)
+	$(MAKE) -C $(GCHECK_DIR) $(MAKECMDGOALS)
+	${check_SCRIPTS}
 
 .PHONY: cleancheck
 cleancheck:
 	cd test && $(MAKE) cleancheck
+	cd gtest && $(MAKE) cleancheck
 endif
